# apps/auth-service/src/routes/auth.routes.ts
@@ -1,6 +1,6 @@
 import express, {Router} from "express";
 
-import { loginUser, userRegistration, verifyUser } from "../controllers/auth.controller";
+import { loginUser, resetUserPassword, userForgetPassword, userRegistration, verifyUser, verifyUserForgetPassword } from "../controllers/auth.controller";
 
 const router: Router = express.Router()
 
@@ -8,6 +8,8 @@ router.post("/user-registeration", userRegistration);
 router.post("/verify-user", verifyUser);
 router.post("/login-user", loginUser)
 
-//TODO: refresh token route
+router.post("/forgot-password-user", userForgetPassword);
+router.post("/reset-password-user", resetUserPassword);
+router.post("/verify-forgot-password-user", verifyUserForgetPassword);
 
 export default router
